Fixed class.newInstance() to remove deprecated warning. Added copyright, javadocs.